--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-#grad {
-  background-image: linear-gradient(to bottom right, purple, pink);
+body {
+  background: linear-gradient(to right, orange, yellow);
 }
