--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, lightpurple, pink); 
+  background: linear-gradient(to right, #e095fd, #fd95e6); 
 }
 
 
